--- a/Makefile.inc
+++ b/Makefile.inc
@@ -5,44 +5,15 @@ CFLAGS+=	-I${.CURDIR}/..
 CFLAGS+=	-DSYSCONFDIR=\"/etc/\" \
 		-DLOCALDBDIR=\"/var/db\" \
 		-DYYTEXT_POINTER=1 \
-		-DINET6=1 \
-		-DHAVE_GETADDRINFO=1 \
-		-DHAVE_GETNAMEINFO=1 \
-		-DHVE_GETIFADRS=1 \
-		-DHAVE_NAMETOINDEX=1 \
-		-DHAVE_STRLCPY=1 \
-		-DHAVE_STRLCAT=1 \
-		-DHAVE_DAEMON=1 \
-		-DHAVE_WARNX=1 \
-		-DSTDC_HEADERS=1 \
-		-DHAVE_SYS_TYPES_H=1 \
-		-DHAVE_SYS_STAT_H=1 \
-		-DHAVE_STDLIB_H=1 \
-		-DHAVE_STRING_H=1 \
-		-DHAVE_MEMORY_H=1 \
-		-DHAVE_STRINGS_H=1 \
-		-DHAVE_INTTYPES_H=1 \
-		-DHAVE_STDINT_H=1 \
-		-DHAVE_UNISTD_H=1 \
-		-DHAVE_FCNTL_H=1 \
-		-DHAVE_SYS_IOCTL_H=1 \
 		-DHAVE_SYS_TIME_H=1 \
-		-DHAVE_SYSLOG_H=1 \
-		-DHAVE_IFADDRS_H=1 \
 		-DTIME_WITH_SYS_TIME=1 \
 		-DHAVE_STRUCT_TM_TM_ZONE=1 \
 		-DHAVE_TM_ZONE=1 \
 		-DHAVE_SIG_ATOMIC_T=1 \
-		-DGETPGRP_VOID=1 \
-		-DRETSIGTYPE=void \
-		-DHAVE_MKTIME=1 \
-		-DHAVE_SELECT=1 \
-		-DHAVE_SOCKET=1 \
 		-DHAVE_CLOCK_GETTIME=1 \
 		-DHAVE_ANSI_FUNC=1 \
 		-DHAVE_TAILQ_FOREACH_REVERSE_OLD=1 \
 		-DHAVE_SA_LEN=1 \
-		-DHAVE_STDARG_H=1
-
+		-DHAVE_STDARG_H
 
 .include <bsd.obj.mk>
